--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-leap-day
+remote_theme: chrisrhymes/bulma-clean-theme
+baseurl: "https://github.com/aiclouds/jekyll-menus/"
+plugins:
+- github-pages
