--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-leap-day
-remote_theme: chrisrhymes/bulma-clean-theme
+remote_theme: jekyll-menus
 baseurl: "https://github.com/aiclouds/jekyll-menus/"
 plugins:
 - github-pages
